--- a/verbatim/img/slidy.css
+++ b/verbatim/img/slidy.css
@@ -133,7 +133,7 @@ div.slide h1 {
   font-size: 160%;
   line-height: 1.2em;
   xbackground: transparent;
-  background-color: #CC0303;
+  background-color: blue;
 	color: white;
 
   padding-left: 10px;
